Adds an explicit "unknown" source language option to the translate bubble.

This allows the user to manually specify that the page language is unknown, and
prevents Afrikaans from being the default source language when page language
cannot be detected.

Bug: 721600
Change-Id: Ia4eb971696a7d88409ae28fdbe85210e40e65b55