chrome/browser/ui/translate/language_combobox_model.cc
@@ -7,9 +7,11 @@
 #include "chrome/browser/ui/translate/translate_bubble_model.h"
 
 LanguageComboboxModel::LanguageComboboxModel(
+    bool is_source_combobox,
     int default_index,
     TranslateBubbleModel* model)
-    : default_index_(default_index < 0 ? 0 : default_index),
+    : is_source_combobox_(is_source_combobox),
+      default_index_(default_index < 0 ? 0 : default_index),
       model_(model) {
   // view::Combobox can't treate an negative index, but |default_index| can be
   // negative when, for example, the page's language can't be detected.
@@ -28,4 +30,8 @@ base::string16 LanguageComboboxModel::GetItemAt(int index) {
 
 int LanguageComboboxModel::GetDefaultIndex() const {
   return default_index_;
+}
+
+bool LanguageComboboxModel::IsItemEnabledAt(int index) const {
+  return is_source_combobox_ || index != model_->GetUnknownLanguageIndex();
 }
